--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
@@ -22,6 +25,8 @@
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.1",
+    "parcel-bundler": "^1.12.5",
+    "pug": "^3.0.2",
     "slugify": "^1.5.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
